# pairsnp-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  Makefile.in  README.md  configure  configure.ac  main.cpp  meta.yaml
.github/workflows/: pairsnp_test.yml
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
src/: Makefile  Makefile.in  main.cpp  pairsnp
test/: ambig.out  ambig_cons.aln  ambig_cons.out  bad.out  filter.out  launch_tests.sh  lowercase.out  sparse.out  test_ambig_with_n.txt  test_filter.txt  test_singleton.txt  test_sparse.txt
